# implicitcalculus

./: CoreElaboration.hs  Main.hs  README.md  SourceElaboration.hs  SrcLexer.x  SrcParser.y  SrcToken.hs  SyntaxSource.hs  SystemFSemantics.hs  Types.lhs  implicitcalculus.cabal
examples/: succ.ic
